# examples

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml
first-depth-search/: Cargo.toml
first-depth-search/src/: algorithm.rs  main.rs  map.rs  variables.rs
interactive-test/: Cargo.toml
interactive-test/src/: macros.rs  main.rs  test.rs
interactive-test/src/test/: attribute.rs  color.rs  cursor.rs
snake/: Cargo.toml
snake/src/: main.rs  map.rs  types.rs
