[package]
name = "crossterm-examples"
version = "0.0.1"
authors = ["T. Post"]
description = "An crossplatform terminal library for manipulating terminals."
repository = "https://github.com/crossterm-rs/examples"
documentation = "https://docs.rs/crossterm/"
license = "MIT"
keywords = ["console", "color", "cursor", "input", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[dependencies]
crossterm = { git = "https://github.com/crossterm-rs/crossterm", branch = "master", version = "0.11" }
