[package]
name = "crossterm-interactive-test"
version = "0.0.1"
authors = ["T. Post", "Robert Vojta <rvojta@me.com>"]
edition = "2018"
description = "Interactive test for crossterm."
license = "MIT"
exclude = ["target", "Cargo.lock"]
readme = "README.md"
publish = false

[dependencies]
crossterm = { path="../../crossterm" }
anes = "0.1.4"